made maps-thumbnail full-width and fixed text-alignment in 2-col-grid

--- a/app/styles/core/layout.scss
+++ b/app/styles/core/layout.scss
@@ -46,4 +46,7 @@
   .sy-column:first-child {
     margin-right: 20px;
   }
+  .sy-column:last-child {
+    text-align: right;
+  }
 }
