--- a/app/styles/core/scaffolding.scss
+++ b/app/styles/core/scaffolding.scss
@@ -38,3 +38,7 @@ a {
 .sy-address {
   font-size: 1.4rem;
 }
+
+.sy-image--full-width {
+  width: 100%;
+}
